...
        <fragment
            android:id="@+id/registerFragment"
            android:name="com.lukma.features.auth.register.RegisterFragment"
            tools:layout="@layout/register_fragment" />

        <action
            android:id="@+id/action_to_homeFragment"
            app:destination="@id/chatGraph"
            app:launchSingleTop="true"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
    </navigation>

...
