<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Hint -->
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_display_name">Display Name</string>

    <!-- Button -->
    <string name="button_login">Login</string>
    <string name="button_register">Register</string>
    <string name="button_create_new_account">Create new account</string>

    <!-- Message -->
    <string name="message_register_success">Welcome to jungle!</string>
</resources>
